<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgType"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="4dp"
            tools:src="@drawable/ic_baseline_phone_in_24" />

        <TextView
            android:id="@+id/tvName"
            style="@style/NotificationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"
            tools:text="@tools:sample/first_names" />

        <TextView
            android:id="@+id/tvBalance"
            style="@style/NotificationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="$400" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvPhone"
        style="@style/NotificationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        tools:text="@tools:sample/us_phones" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                style="@style/NotificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:text="@string/next_appointment"
                android:textColor="@color/semi_black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:id="@+id/tvNextVisit"
                style="@style/NotificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="@tools:sample/full_names" />

            <TextView
                style="@style/NotificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="16dp"
                android:text="@string/previous_appointment"
                android:textColor="@color/semi_black"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

            <TextView
                android:id="@+id/tvLastVisit"
                style="@style/NotificationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="@tools:sample/full_names" />

        </LinearLayout>
        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_action_avatar_placeholder" />
    </LinearLayout>


    <Button
        android:id="@+id/btnCard"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="0dp"
        android:visibility="gone"
        android:text="@string/open_medical_card"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/primary" />
</LinearLayout>